--- a/2013/1km paper/data_table.tex
+++ b/2013/1km paper/data_table.tex
@@ -14,16 +14,18 @@ Rules to set number of digits. Guide: not to introduce additional (significant) 
 
 
 \begin{table*}
-%\vskip-15mm
 \caption{%
 The elastic differential cross-section as determined in this analysis. The three left-most columns describe the bins in $t$. The representative point gives the $t$ value suitable for fitting~\cite{lafferty94}.
 %uncertainty due to different fit models negligible:$10^{-7}\un{GeV^2}$
 The other columns are related to the differential cross-section. The six right-most columns give the leading systematic biases in $\d\sigma/\d t$ for $1\sigma$-shifts in the respective quantities, $\delta s_q$, see Eqs.~(\ref{eq:syst mode}) and (\ref{eq:covar mat}). The two contributions due to optics correspond to the two vectors in Eq.~(\ref{eq:opt bias modes}).
 }%
-%\vskip-5mm
+\vskip-5mm
 \label{tab:data}
 \begin{center}
-\small
+%\small
+\footnotesize
+%\scriptsize
+% TODO: used custom size?? 9pt would be good!
 \setlength{\tabcolsep}{3.5pt}
 \def\arraystretch{0.8}
 \begin{tabular}{ccc@{\hskip15pt}ccccccccc}
