--- a/2013/1km paper/authorlist_data.tex
+++ b/2013/1km paper/authorlist_data.tex
@@ -20,9 +20,9 @@
 	\AddAuthor{A.~D'Orazio}{5c}{5a}{}%
 	\AddAuthor{M.~Doubek}{1c}{}{}%
 	\AddAuthor{K.~Eggert}{10}{}{}%
-	\AddAuthor{V.~Eremin}{}{}{d}%
+	\AddAuthor{V.~Eremin}{}{}{e}%
 	\AddAuthor{F.~Ferro}{6a}{}{}%
-	\AddAuthor{A. Fiergolski}{5a}{}{}%
+	\AddAuthor{A. Fiergolski}{5a}{}{d}%
 	\AddAuthor{F.~Garcia}{3a}{}{}%
 	\AddAuthor{V.~Georgiev}{1a}{}{}%
 	\AddAuthor{S.~Giani}{9}{}{}%
@@ -53,7 +53,7 @@
 	\AddAuthor{E.~Oliveri}{9}{}{}%
 	\AddAuthor{F.~Oljemark}{3a}{3b}{}%
 	\AddAuthor{R.~Orava}{3a}{3b}{}%
-	\AddAuthor{M.~Oriunno}{}{}{e}%
+	\AddAuthor{M.~Oriunno}{}{}{f}%
 	\AddAuthor{K.~\"{O}sterberg}{3a}{3b}{}%
 	\AddAuthor{P.~Palazzi}{9}{}{}%
 	\AddAuthor{V.~Passaro}{5c}{5a}{}%
@@ -68,13 +68,13 @@
 	\AddAuthor{F.~Ravotti}{9}{}{}%
 	\AddAuthor{E.~Robutti}{6a}{}{}%
 	\AddAuthor{L.~Ropelewski}{9}{}{}%
-	%\AddAuthor{C.~Royon}{}{}{f}%
+	%\AddAuthor{C.~Royon}{}{}{g}%
 	\AddAuthor{G.~Ruggiero}{9}{}{}%
 	\AddAuthor{H.~Saarikko}{3a}{3b}{}%
 	\AddAuthor{A.~Scribano}{7a}{}{}%
 	\AddAuthor{J.~Smajek}{9}{}{}%
 	\AddAuthor{W.~Snoeys}{9}{}{}%
-	%\AddAuthor{T.~Sodzawiczny}{9}{}{}%
+	\AddAuthor{T.~Sodzawiczny}{9}{}{}%
 	\AddAuthor{J.~Sziklai}{4a}{}{}%
 	\AddAuthor{C.~Taylor}{10}{}{}%
 	\AddAuthor{N.~Turini}{7b}{}{}%
@@ -111,9 +111,10 @@
 	
 \def\DeclareExternalInstitutes{%
 	\AddExternalInstitute{a}{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, Bulgarian Academy of Sciences, Sofia, Bulgaria.}
-	\AddExternalInstitute{b}{Department of Atomic Physics, ELTE University - Budapest, Hungary.}
+	\AddExternalInstitute{b}{Department of Atomic Physics, ELTE University, Budapest, Hungary.}
 	\AddExternalInstitute{c}{Institute of Nuclear Physics, Polish Academy of Science, Krakow, Poland.}
-	\AddExternalInstitute{d}{Ioffe Physical - Technical Institute of Russian Academy of Sciences, St.~Petersburg, Russian Federation.}
-	\AddExternalInstitute{e}{SLAC National Accelerator Laboratory, Stanford CA, USA.}
-	%\AddExternalInstitute{f}{IRFU-SPP, CEA - Saclay, France}
+	\AddExternalInstitute{d}{Warsaw University of Technology, Warsaw, Poland.}
+	\AddExternalInstitute{e}{Ioffe Physical - Technical Institute of Russian Academy of Sciences, St.~Petersburg, Russian Federation.}
+	\AddExternalInstitute{f}{SLAC National Accelerator Laboratory, Stanford CA, USA.}
+	%\AddExternalInstitute{g}{IRFU-SPP, CEA - Saclay, France}
 }
