Frici's comments incorporated
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@10195 4525493e-7705-40b1-a816-d608a930855b

--- a/2014/90m paper/data_taking.tex
+++ b/2014/90m paper/data_taking.tex
@@ -34,7 +34,7 @@ Optical functions for elastic proton transport. The values refer to the right ar
 \vskip-3mm
 \begin{tabular}{ccccc}\hline\hline
 unit & $L_x$ & $v_x$ & $L_y$ & $v_y$ \cr\hline
-near & $2.45\un{m}$  & $-2.17$ & $239\un{m}$ & $0.040$ \cr
+near & $\phantom{-}2.45\un{m}$  & $-2.17$ & $239\un{m}$ & $0.040$ \cr
 far  & $-0.37\un{m}$ & $-1.87$ & $264\un{m}$ & $0.021$ \cr
 \hline\hline
 \end{tabular}
