--- a/2014/90m paper/results.tex
+++ b/2014/90m paper/results.tex
@@ -23,7 +23,7 @@ The final differential cross-section in the ``optimised'' binning is presented i
 To study the detailed behaviour of the differential cross-section, a series of fits has been made using the parametrisation:
 \begin{equation}
 \label{eq:fit param}
-{\d\sigma\over\d t}(t) = \left. \d\sigma\over\d t\right|_{0} \ \exp\left( \sum\limits_{i = 1}^{N_{b}} b_i\, t^i \right) \ ,
+{\d\sigma\over\d t}(t) = \left. \d\sigma\over\d t\right|_{t=0} \ \exp\left( \sum\limits_{i = 1}^{N_{b}} b_i\, t^i \right) \ ,
 \end{equation}
 which includes the pure exponential ($N_b = 1$) and its straight-forward extensions ($N_b = 2, 3$).
 
@@ -43,7 +43,7 @@ Figure~\ref{fig:data rel ob} shows several fits of the differential cross-sectio
 The other two fits ($N_b = 2, 3$) are of reasonable quality and can, therefore, be used for a total cross-section estimation with the optical theorem in the form
 \begin{equation}
 \label{eq:si tot}
-\sigma_{\rm tot}^2 = {16\pi\, (\hbar c)^2\over 1 + \rho^2}\, \left. \d\sigma_{\rm el}\over\d t\right|_0\ ,
+\sigma_{\rm tot}^2 = {16\pi\, (\hbar c)^2\over 1 + \rho^2}\, \left. \d\sigma_{\rm el}\over\d t\right|_{t=0}\ ,
 \end{equation}
 which neglects the effects due to the Coulomb interaction (QED).
 Using the COMPETE~\cite{compete} preferred-model extrapolation of $\rho = 0.140\pm 0.007$ yields
