--- a/2014/90m paper/elastic_90m_npb.tex
+++ b/2014/90m paper/elastic_90m_npb.tex
@@ -126,8 +126,8 @@ proton-proton interactions \sep elastic scattering \sep total cross-section \sep
 
 \bibitem{totem-optics}
 	\Name{G.~Antchev~\etal{}~(TOTEM Collaboration)}
-	LHC Optics Measurement with Proton Tracks Detected by the Roman Pots of the TOTEM Experiment, 
-	New J. Phys. 16 (2014) 103041.
+	% LHC Optics Measurement with Proton Tracks Detected by the Roman Pots of the TOTEM Experiment, 
+	\REVIEW{New J.~Phys.}{16}{2014}{103041}
 
 \bibitem{op-elog} CERN BE-OP eLogbook: \url{https://www.cern.ch/ab-dep-op-elogbook/elogbook/secure/eLogbook.php?shiftId=1045825}
 
