--- a/2014/90m paper/data_taking.tex
+++ b/2014/90m paper/data_taking.tex
@@ -1,7 +1,7 @@
 \section{Data Taking}
 \label{sec:data taking}
 
-The measurement presented here is based on data taken in July 2012, during the LHC fill number 2836 providing protons colliding at the centre-of-mass energy $\sqrt s = 8\un{TeV}$. The vertical RPs were inserted at a distance of $9.5$ times the transverse beam size, $\sigma_{\rm beam}$. Initially two, later three colliding bunch-pairs were used, with a typical population of $8\cdot10^{10}$ protons, yielding an instantaneous luminosity of about $10^{28}\un{cm^{-2}s^{-1}}$ per bunch. The main trigger required a coincidence between the RPs in both arms, combining the near and far units of a station in \textit{OR} to ensure maximal efficiency. During the about $11\un{h}$ long data-taking, a luminosity of $735\un{\mu b^{-1}}$ was accumulated, giving $7.2\cdot 10^6$ tagged elastic events.
+The measurement presented here is based on data taken in July 2012, during the LHC fill number 2836 providing protons colliding at the centre-of-mass energy $\sqrt s = 8\un{TeV}$. The vertical RPs were inserted at a distance of $9.5$ times the transverse beam size, $\sigma_{\rm beam}$. Initially two, later three colliding bunch-pairs were used, with a typical population of $8\cdot10^{10}$ protons each, yielding an instantaneous luminosity of about $10^{28}\un{cm^{-2}s^{-1}}$ per bunch. The main trigger required a coincidence between the RPs in both arms, combining the near and far units of a station in \textit{OR} to ensure maximal efficiency. During the about $11\un{h}$ long data-taking, a luminosity of $735\un{\mu b^{-1}}$ was accumulated, giving $7.2\cdot 10^6$ tagged elastic events.
 
 %minimal $|t| = 0.027\un{GeV^2}$ % left edge of left most bin
 
