Ken's first comment
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@10207 4525493e-7705-40b1-a816-d608a930855b

--- a/2014/90m paper/differential_cross_section.tex
+++ b/2014/90m paper/differential_cross_section.tex
@@ -230,7 +230,7 @@ The calculation of the geometrical correction ${\cal A}_{\rm geom}$ is based on 
 \includegraphics{fig/acc_corr_phi_lab.pdf}
 \vskip-3mm
 \caption{%
-Distribution of scattering angle projections $\theta_y^*$ vs.~$\theta_x^*$. The upper (lower) part comes from the diagonal 45 bottom -- 56 top (45 top -- 56 bottom). The red horizontal lines represent cuts due to the LHC apertures, the magenta horizontal lines cuts due to the sensor edges. The dotted circles show contours of constant scattering angle $\theta^*$ as indicated in the middle of the plot. The parts of the contours within acceptance are emphasized in thick black.
+Distribution of scattering angle projections $\theta_y^*$ vs.~$\theta_x^*$. The upper (lower) part comes from the diagonal 45 bottom -- 56 top (45 top -- 56 bottom). The colour scale gives number of events (after the ${\cal A}_{\rm fluct}$ correction) per bin. The red horizontal lines represent cuts due to the LHC apertures, the magenta horizontal lines cuts due to the sensor edges. The dotted circles show contours of constant scattering angle $\theta^*$ as indicated in the middle of the plot. The parts of the contours within acceptance are emphasized in thick black.
 }
 \label{fig:acceptance principle}
 \end{center}
