--- a/2014/90m paper/introduction.tex
+++ b/2014/90m paper/introduction.tex
@@ -12,13 +12,16 @@ exponential functions, ${\rm e}^{-B |t|-C t^2}$~\cite{npb141,npb248}.
 At the S$\rm\bar{p}$pS, for 
 $\sqrt{s} = 546\,$GeV, a change of slope at $|t| \approx 0.14\,\rm GeV^{2}$ 
 has been observed, while the inclusion of a quadratic term in the exponent did
-not improve the fit significantly~\cite{plb147}.
+not improve the fit significantly~\cite{plb147}. At the Tevatron~\cite{prl61,prl68,prd50,prd86} no 
+deviations from a pure exponentials were observed, except at larger $|t|$ where
+the influence of the shoulder ($\sim 0.8\,\rm GeV^{2}$ at 
+$\sqrt{s} = 0.546$\,TeV and $\sim 0.6\,\rm GeV^{2}$ at 1.8 and 1.96\,TeV) 
+becomes visible.
 At the LHC, at 7\,TeV as well as at 8\,TeV, all data published so 
 far~\cite{epl96,epl101-el,prl111,alfa} have been
 compatible with a pure exponential shape.
 
 This report presents a new data sample of elastic scattering at the energy of $\sqrt s = 8\un{TeV}$. Thanks to its very high statistics,
-%and an improved analysis technique
 an unprecedented precision has been reached in the region of four-momentum transfer squared $0.027 \lesssim |t| \lesssim 0.2\un{GeV^2}$. Both the statistical and systematic components of the differential cross-section uncertainty are controlled 
 at a level below $1\un{\%}$, except for the overall normalisation 
 (Section~\ref{sec:normalisation}). Consequently, the functional form of the cross-section can be strongly constrained, thus having more impact on theoretical model building and, in particular, on the extrapolation to $t=0$ (neglecting the influence of Coulomb scattering in the observed range), used for total cross-section determination. The often used purely exponential extrapolation has been found inadequate, and extended parametrisations are provided, still yielding total cross-section values compatible with the previous TOTEM results~\cite{prl111} at the same energy.
