--- a/2014/90m paper/introduction.tex
+++ b/2014/90m paper/introduction.tex
@@ -13,7 +13,7 @@ At the S$\rm\bar{p}$pS, for
 $\sqrt{s} = 546\,$GeV, a change of slope at $|t| \approx 0.14\,\rm GeV^{2}$ 
 has been observed, while the inclusion of a quadratic term in the exponent did
 not improve the fit significantly~\cite{plb147}. At the Tevatron~\cite{prl61,prl68,prd50,prd86} no 
-deviations from a pure exponentials were observed, except at larger $|t|$ where
+deviations from pure exponential functions were observed, except at larger $|t|$ where
 the influence of the shoulder ($\sim 0.8\,\rm GeV^{2}$ at 
 $\sqrt{s} = 0.546$\,TeV and $\sim 0.6\,\rm GeV^{2}$ at 1.8 and 1.96\,TeV) 
 becomes visible.
