--- a/2014/90m paper/elastic_90m_npb.tex
+++ b/2014/90m paper/elastic_90m_npb.tex
@@ -54,7 +54,7 @@ $\sqrt s = 8\un{TeV}$ based on a high-statistics data sample obtained with
 the $\beta^* = 90\un{m}$ optics. 
 Both the statistical and systematic uncertainties remain below $1\un{\%}$ (except for the contribution from the overall normalisation). This unprecedented precision allows to exclude a purely exponential differential cross-section in the range of four-momentum transfer squared $0.027 < |t| < 0.2\un{GeV^2}$ with a significance greater than $7\un{\sigma}$.
 %
-Two extended parametrisations, with quadratic and cubic polynomials in the exponent, are shown to be well compatible with the data. Using them for the differential cross-section extrapolation to $t=0$, and further applying the optical theorem, yields total cross-section estimates $(100.8 \pm 2.1)\un{mb}$ and $(101.2 \pm 2.1)\un{mb}$, well compatible with previous TOTEM measurements.
+Two extended parametrisations, with quadratic and cubic polynomials in the exponent, are shown to be well compatible with the data. Using them for the differential cross-section extrapolation to $t=0$, and further applying the optical theorem, yields total cross-section estimates of $(100.8 \pm 2.1)\un{mb}$ and $(101.2 \pm 2.1)\un{mb}$, respectively, well compatible with previous TOTEM measurements.
 \end{abstract}
 
 \begin{keyword}
@@ -97,7 +97,12 @@ proton-proton interactions \sep elastic scattering \sep total cross-section \sep
 
 \bibitem{plb147} \Name{M. Bozzo et al.} \REVIEW{Phys.~Lett.}{B147}{1984}{385}
 
-\bibitem{epl96}
+\bibitem{prl61} \Name{N.A. Amos et al.} \REVIEW{Phys.~Rev.~Lett.}{61}{1988}{525}
+\bibitem{prl68} \Name{N.A. Amos et al.} \REVIEW{Phys.~Rev.~Lett.}{68}{1992}{2433}
+\bibitem{prd50} \Name{F. Abe et al.} \REVIEW{Phys.~Rev.}{D50}{1994}{5518}
+\bibitem{prd86} \Name{V.M. Abazov et al.} \REVIEW{Phys.~Rev.}{D86}{2012}{012009}
+
+\bibitem{epl96} 
     %First measurements of the total proton-proton cross-section at the LHC energy of $\sqrt s =7\,\rm TeV$ CERN-PH-EP-2011-158
 	\Name{G.~Antchev~\etal{}~(TOTEM Collaboration)}
 	\REVIEW{Europhys.~Lett.}{96}{2011}{21002}
@@ -133,9 +138,8 @@ proton-proton interactions \sep elastic scattering \sep total cross-section \sep
 
 \bibitem{hubert-thesis}
 	\Name{H.~Niewiadomski}
-	%Reconstruction of Protons in the TOTEM Roman Pot Detectors at the LHC
-    PhD thesis, 
-	%University of Manchester, 2008
+	``Reconstruction of Protons in the TOTEM Roman Pot Detectors at the LHC'',
+    PhD thesis, University of Manchester, 2008;
     CERN-THESIS-2008-080,
 	\url{http://cds.cern.ch/record/1131825}
 
