--- a/2014/90m paper/results.tex
+++ b/2014/90m paper/results.tex
@@ -18,7 +18,7 @@ Differential cross-section using ``optimised'' binning, as given in Table~\ref{t
 \end{figure}
 
 
-The final differential cross-section in the ``optimised'' binning is presented in Table~\ref{tab:data} and Figure \ref{fig:data ob}. In order to visualise small deviations from the leading pure-exponential behaviour, Figure~\ref{fig:data rel ob} shows the relative difference of the cross-section from a reference exponential. This plot immediately suggests a non-exponentiality of the data: pure exponentials would look like (almost) linear functions in this reference frame.
+The final differential cross-section in the ``optimised'' binning is presented in Table~\ref{tab:data} and Figure \ref{fig:data ob}. In order to visualise small deviations from the leading pure-exponential behaviour, Figure~\ref{fig:data rel ob} shows the relative difference of the cross-section from a reference exponential. This plot immediately suggests a non-exponentiality of the data: pure exponentials would look like (almost) linear functions in this kind of representation.
 
 To study the detailed behaviour of the differential cross-section, a series of fits has been made using the parametrisation:
 \begin{equation}
