Ken's suggestions processed
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@10218 4525493e-7705-40b1-a816-d608a930855b

--- a/2014/90m paper/elastic_90m_npb.tex
+++ b/2014/90m paper/elastic_90m_npb.tex
@@ -48,13 +48,7 @@
 
 
 \begin{abstract}
-The TOTEM experiment has made a high-precision measurement of the elastic 
-proton-proton differential cross-section at the centre-of-mass energy 
-$\sqrt s = 8\un{TeV}$ based on a high-statistics data sample obtained with 
-the $\beta^* = 90\un{m}$ optics. 
-Both the statistical and systematic uncertainties remain below $1\un{\%}$ (except for the contribution from the overall normalisation). This unprecedented precision allows to exclude a purely exponential differential cross-section in the range of four-momentum transfer squared $0.027 < |t| < 0.2\un{GeV^2}$ with a significance greater than $7\un{\sigma}$.
-%
-Two extended parametrisations, with quadratic and cubic polynomials in the exponent, are shown to be well compatible with the data. Using them for the differential cross-section extrapolation to $t=0$, and further applying the optical theorem, yields total cross-section estimates of $(100.8 \pm 2.1)\un{mb}$ and $(101.2 \pm 2.1)\un{mb}$, respectively, well compatible with previous TOTEM measurements.
+\input abstract
 \end{abstract}
 
 \begin{keyword}
@@ -102,7 +96,7 @@ proton-proton interactions \sep elastic scattering \sep total cross-section \sep
 \bibitem{prd50} \Name{F. Abe et al.} \REVIEW{Phys.~Rev.}{D50}{1994}{5518}
 \bibitem{prd86} \Name{V.M. Abazov et al.} \REVIEW{Phys.~Rev.}{D86}{2012}{012009}
 
-\bibitem{epl96} 
+\bibitem{epl96}
     %First measurements of the total proton-proton cross-section at the LHC energy of $\sqrt s =7\,\rm TeV$ CERN-PH-EP-2011-158
 	\Name{G.~Antchev~\etal{}~(TOTEM Collaboration)}
 	\REVIEW{Europhys.~Lett.}{96}{2011}{21002}
@@ -115,8 +109,9 @@ proton-proton interactions \sep elastic scattering \sep total cross-section \sep
 	\Name{G.~Antchev~\etal{}~(TOTEM Collaboration)}
 	\REVIEW{Phys.~Rev.~Lett.}{111}{2013}{012001}
 
-\bibitem{alfa} \Name{The ATLAS Collaboration} 
-               \REVIEW{Nucl.~Phys.}{B889}{2014}{486-548}
+\bibitem{alfa}
+	\Name{G.~Aad~\etal{}~(ATLAS Collaboration)}
+	\REVIEW{Nucl.~Phys.}{B889}{2014}{486-548}
 
 \bibitem{totem-jinst}
     %The TOTEM Experiment at the CERN Large Hadron Collider, JINST 3 S08007, 2008
