--- a/2014/90m paper/conclusion.tex
+++ b/2014/90m paper/conclusion.tex
@@ -8,8 +8,8 @@ cross-section for elastic proton-proton scattering with significance greater tha
 in the $|t|$ range from 0.027 to 0.2\,GeV$^{2}$ at $\sqrt{s}=8\,$TeV. The data
 are described satisfactorily with an exponent quadratic or cubic in $t$.
 Using this refined parametrisation for the extrapolation to the optical point,
-$t = 0$, yields a total cross-section compatible with the previous measurement (in both cases
-neglecting the effects due to the Coulomb interaction).
+$t = 0$, yields total cross-section values compatible with the previous measurement, in all cases
+neglecting the effects due to the Coulomb interaction.
 
 In an upcoming analysis, this proof of non-exponentiality in a 
 $t$-domain strongly
