--- a/2014/90m paper/differential_cross_section.tex
+++ b/2014/90m paper/differential_cross_section.tex
@@ -2,7 +2,7 @@
 \section{Analysis}
 \label{sec:analysis}
 
-The analysis method is similar to the previously published ones~\cite{epl101-el,prl111}.
+The analysis method is similar to the ones used in the previous publications~\cite{epl101-el,prl111}.
 However, a different normalisation approach is used (Section~\ref{sec:normalisation}) that makes all $t$-independent scaling factors irrelevant.
 
 The analysis is presented in two main blocks. Section~\ref{sec:event anal} covers all aspects related to the reconstruction of a single event.
@@ -13,7 +13,7 @@ Section~\ref{sec:diff cs} describes the steps of transforming a raw $t$-distribu
 \subsection{Event Analysis}
 \label{sec:event anal}
 
-Event kinematics are determined from coordinates of track hits in the RPs after proper alignment (see Section~\ref{sec:alignment}), using the LHC optics (see Section~\ref{sec:optics}).
+Event kinematics are determined from the coordinates of track hits in the RPs after proper alignment (see Section~\ref{sec:alignment}), using the LHC optics (see Section~\ref{sec:optics}).
 
 
 %------------------------------
@@ -37,7 +37,7 @@ Once an event is selected, the information from both arms is merged yielding bet
 	\theta_x^* = {\theta_x^{*\rm L} + \theta_x^{*\rm R} \over 2}\ ,\qquad
 	\theta_y^* = {\theta_y^{*\rm L} + \theta_y^{*\rm R} \over 2}\ .
 \end{equation}
-Eventually, the full scattering angle, $\theta^*$, and four-momentum transfer squared, $t$, are calculated as
+Eventually, the full scattering angle and four-momentum transfer squared are calculated as
 
 \begin{equation}
 \label{eq:th t}
@@ -72,7 +72,7 @@ The residual errors induce a bias in the reconstructed scattering angles:
 	\theta_x^* \rightarrow (1 + d_x)\, \theta_x^*\ ,\qquad
 	\theta_y^* \rightarrow (1 + d_y)\, \theta_y^*\ .
 \end{equation}
-For the two-arm reconstruction, Eq.~(\ref{eq:kin 2a}), the biases $d_x$ and $d_y$ have uncertainties of $0.21\un{\%}$ and $0.25\un{\%}$, respectively, and correlation factor of $-0.70$. These estimates include the effects of magnet field harmonics. For evaluating the impact on the $t$-distribution, it is convenient to decompose the correlated biases $d_x$ and $d_y$ into eigenvectors of the covariance matrix:
+For the two-arm reconstruction, Eq.~(\ref{eq:kin 2a}), the biases $d_x$ and $d_y$ have uncertainties of $0.21\un{\%}$ and $0.25\un{\%}$, respectively, and a correlation factor of $-0.70$. These estimates include the effects of magnet field harmonics. For evaluating the impact on the $t$-distribution, it is convenient to decompose the correlated biases $d_x$ and $d_y$ into eigenvectors of the covariance matrix:
 \begin{equation}
 \label{eq:opt bias modes}
 \begin{pmatrix} d_x\cr d_y \end{pmatrix} =
@@ -86,11 +86,11 @@ normalised such that the factors $\eta_{1,2}$ have unit variance.
 \subsubsection{Resolution}
 \label{sec:resolution}
 
-Statistical fluctuations in the reconstructed scattering angles are caused by the beam divergence and, in the horizontal projection (due to small $L_x$), also by the sensor resolution. They are studied by comparing the scattering angles reconstructed from the two arms, in particular through differences $\theta_{x,y}^{*\rm R} - \theta_{x,y}^{*\rm L}$ as illustrated in Figure \ref{fig:beam divergence}. The distributions exhibit small deviations from a Gaussian shape which decrease with time.
+Statistical fluctuations in the reconstructed scattering angles are caused by the beam divergence and, in the horizontal projection (due to the small $L_x$), also by the sensor resolution. They are studied by comparing the scattering angles reconstructed from the two arms, in particular through differences $\theta_{x,y}^{*\rm R} - \theta_{x,y}^{*\rm L}$ as illustrated in Figure \ref{fig:beam divergence}. The distributions exhibit small deviations from a Gaussian shape which decrease with time.
 
 Since in good approximation the fluctuations are independent in each arm, the angular resolution for the two-arm reconstruction, Eq.~(\ref{eq:kin 2a}), is given by half of the standard deviation of the $\theta_{x,y}^{*\rm R} - \theta_{x,y}^{*\rm L}$ distributions. As shown in Figure~\ref{fig:resolutions}, the resolution deteriorates slightly with time, which can be expected mainly due to the emittance growth. The small difference in $\theta_x^*$ resolution between the diagonals can be attributed to different RPs, each with slightly different spatial resolution, being involved in the two diagonals.
 
-Measurements of beam emittances~\cite{op-elog} show that the vertical beam divergences of the two beams are equal with a tolerance of about $15\un{\%}$. Exploiting this equality, one can de-convolute the distribution of $\theta_y^{*\rm R} - \theta_y^{*\rm L}$ in order to obtain the beam-divergence distribution, used e.g.~for acceptance corrections discussed in Section~\ref{sec:acc corr} (only required in the vertical plane).
+Measurements of beam emittances~\cite{op-elog} show that the vertical beam divergences of the two beams are equal within a tolerance of about $15\un{\%}$. Exploiting this equality, one can deconvolute the distribution of $\theta_y^{*\rm R} - \theta_y^{*\rm L}$ in order to obtain the beam-divergence distribution, used e.g.~for acceptance corrections discussed in Section~\ref{sec:acc corr} (only required in the vertical plane).
 
 \begin{figure}
 \begin{center}
@@ -114,7 +114,7 @@ Difference between vertical scattering angles reconstructed in the right and lef
 \includegraphics{fig/resolutions_vs_time.pdf}
 \vskip-4mm
 \caption{%
-Angular resolution for the two-arm reconstruction, Eq.~(\ref{eq:kin 2a}), as a function of time (from the beginning of the run). The step in $\theta_y^*$ resolution around $7\un{h}$ is due to inclusion of another proton bunch with a larger vertical emittance.
+Angular resolution for the two-arm reconstruction, Eq.~(\ref{eq:kin 2a}), as a function of time (from the beginning of the run). The step in $\theta_y^*$ resolution around $7\un{h}$ is due to inclusion of another colliding bunch-pair with a larger vertical emittance.
 }
 \label{fig:resolutions}
 \end{center}
@@ -148,7 +148,7 @@ The cuts used to select elastic events are summarised in Table \ref{tab:cuts}. C
 Monte-Carlo simulation suggests that applying all the five cuts at $3\un{\sigma}$ level would lead to a loss of about $2\un{\%}$ of elastic events. Setting the thresholds to $4\un{\sigma}$ yields a tolerable loss of about $0.07\un{\%}$ and therefore the cuts are applied at the $4\un{\sigma}$ level.
 % 2sigma: 76%, 3sigma: 98.02%, 4sigma: 99.93%, 5sigma: 99.999%
 
-The tagging efficiency is studied experimentally by applying the cuts also at the $5\un{\sigma}$ level. This selection yields about $0.5\un{\%}$ more events in every $t$ bin -- thus the inefficiency is irrelevant for this analysis (since the overall normalisation is determined from another dataset, see Section~\ref{sec:normalisation}).
+The tagging efficiency is studied experimentally by applying the cuts also at the $5\un{\sigma}$ level. This selection yields about $0.5\un{\%}$ more events in every $t$ bin -- thus the inefficiency is irrelevant for this analysis since the overall normalisation is determined from another dataset, see Section~\ref{sec:normalisation}.
 
 
 \begin{table}
@@ -186,7 +186,7 @@ Correlation plots for the event selection cuts summarised in Table~\ref{tab:cuts
 \subsubsection{Background}
 \label{sec:background}
 
-Expectable background (i.e.~non-elastic events passing the tagging cuts) may come from central diffraction as well as pile-up of single diffraction and/or beam-halo protons. The background rate is studied by plotting the discriminators from Table~\ref{tab:cuts} under various cut combinations, see an example in Figure~\ref{fig:background}. While the central part (signal) remains essentially constant, the tails (background) are strongly suppressed with increasing number of cuts applied. This interpretation is further supported by the discriminator distributions from anti-diagonal RP configurations, see the dotted curves in the figure. While these top -- top or bottom -- bottom configurations cannot contain any elastic signal, they are likely to have a similar share of events causing background to the presented analysis. And indeed, the figure shows a good agreement at the distribution tails. Integrating the anti-diagonal curve over the signal region (see the dashed lines in the figure) yields a background estimate of $1 - {\cal B} < 10^{-4}$.
+Expectable background (i.e.~non-elastic events passing the tagging cuts) may come from central diffraction as well as pile-up of single diffraction and/or beam-halo protons. The background rate is studied by plotting the discriminators from Table~\ref{tab:cuts} under various cut combinations, see an example in Figure~\ref{fig:background}. While the central part (signal) remains essentially constant, the tails (background) are strongly suppressed with increasing number of cuts applied. This interpretation is further supported by the discriminator distributions from non-diagonal RP configurations, see the dotted curves in the figure. While these top -- top or bottom -- bottom configurations cannot contain any elastic signal, they are likely to have a similar share of events causing background to the presented analysis. And indeed, the figure shows a good agreement at the distribution tails. Integrating the non-diagonal curve over the signal region (see the dashed lines in the figure) yields a background estimate of $1 - {\cal B} < 10^{-4}$.
 %, independent of whether discriminator 1, 2 or 5 is used.
 % anyway irrelevant due to the normalisation approach
 
@@ -197,7 +197,7 @@ Expectable background (i.e.~non-elastic events passing the tagging cuts) may com
 % If needed, ask for a different size at jan.kaspar@cern.ch.
 \includegraphics{fig/cut_distributions.pdf}
 \caption{%
-Distributions of discriminator 1, i.e. the difference between the horizontal scattering angle reconstructed from the right and the left arm. Solid curves: data from diagonal 45 top -- 56 bottom, the different colours correspond to various combinations of the selection cuts (see numbering in Table~\ref{tab:cuts}). Dotted curves: data from anti-diagonal RP configurations, obtained by inverting track coordinates in the left arm. The vertical dashed lines represent the boundaries of the signal region ($\pm 4\un{\sigma}$).
+Distributions of discriminator 1, i.e. the difference between the horizontal scattering angle reconstructed from the right and the left arm. Solid curves: data from diagonal 45 top -- 56 bottom, the different colours correspond to various combinations of the selection cuts (see numbering in Table~\ref{tab:cuts}). Dotted curves: data from non-diagonal RP configurations, obtained by inverting track coordinates in the left arm. The vertical dashed lines represent the boundaries of the signal region ($\pm 4\un{\sigma}$).
 }
 \label{fig:background}
 \end{center}
@@ -208,7 +208,7 @@ Distributions of discriminator 1, i.e. the difference between the horizontal sca
 \subsubsection{Acceptance Correction}
 \label{sec:acc corr}
 
-Two proton detection limitations have been identified: detector coverage (mostly at the edge facing the beam, i.e. relevant for small $|\theta_y^*|$) and LHC apertures ($|\theta_y^*| \approx 100\un{\mu rad}$). The correction accounting for these limitations includes two contributions -- a geometrical correction ${\cal A}_{\rm geom}$ reflecting the fraction of the phase space within the acceptance and a component ${\cal A}_{\rm fluct}$ correcting for fluctuations around the acceptance limitations (cuts in $\theta_y^*$):
+Two proton detection limitations have been identified: detector coverage (mostly at the edge facing the beam, i.e. relevant for small $|\theta_y^*|$) and LHC apertures ($|\theta_y^*| \approx 100\un{\mu rad}$). The correction accounting for these limitations includes two contributions -- a geometrical correction ${\cal A}_{\rm geom}$ reflecting the fraction of the phase space within the acceptance and a component ${\cal A}_{\rm fluct}$ correcting for fluctuations around the acceptance limits (cuts in $\theta_y^*$):
 \begin{equation}
 {\cal A}(\theta^*, \theta_y^*) = {\cal A}_{\rm geom}(\theta^*)\ {\cal A}_{\rm fluct}(\theta_y^*)\ .
 \end{equation}
@@ -237,7 +237,7 @@ Distribution of scattering angle projections $\theta_y^*$ vs.~$\theta_x^*$. The 
 \end{figure}
 
 
-The correction ${\cal A}_{\rm fluct}$ is calculated analytically from the probability that any of the two elastic protons is pushed outside the acceptance due to the beam divergence. The beam divergence distribution is modelled as a Gaussian with the spread determined by the method described in Section~\ref{sec:resolution}. This correction contribution is sizeable only close to the acceptance limitations but is kept below $1.5$ by discarding data with larger corrections. The uncertainties are related to the resolution parameters (vertical beam divergence, left-right asymmetry and non-Gaussian shape), and all stay below $0.1\un{\%}$.
+The correction ${\cal A}_{\rm fluct}$ is calculated analytically from the probability that any of the two elastic protons leaves the region of acceptance due to the beam divergence. The beam divergence distribution is modelled as a Gaussian with the spread determined by the method described in Section~\ref{sec:resolution}. This correction contribution is sizeable only close to the acceptance limits but is kept below $1.5$ by discarding data with larger corrections. The uncertainties are related to the resolution parameters (vertical beam divergence, left-right asymmetry and non-Gaussian shape), and all stay below $0.1\un{\%}$.
 
 
 \iffalse
@@ -372,7 +372,7 @@ In addition, the complete analysis chain has been applied in two independent ana
 \subsection{Final Data Merging}
 \label{sec:final data merging}
 
-\begin{figure*}[ht]
+\begin{figure*}
 \begin{center}
 % Do not scale the graphics - fonts have been adjusted to match with figure caption.
 % If needed, ask for a different size at jan.kaspar@cern.ch.
@@ -390,7 +390,7 @@ The right plot provides a zoom of the left one.
 
 Finally, the differential cross-section histograms from both diagonals are merged. This is accomplished by a per-bin weighted average, with the weight given by inverse squared statistical uncertainty. The statistical and systematic uncertainties are propagated accordingly. For the systematic ones, the correlation between the diagonals is taken into account. For example, the vertical (mis-)alignment of the RPs within one unit is almost fully correlated, thus the effect on the differential cross-section is opposite in the two diagonals, and consequently its impact is strongly reduced once the diagonals are merged.
 
-The final systematic uncertainties are summarised in Figure~\ref{fig:syst unc} where their impact on the differential cross-section is shown. The leading uncertainties include normalisation, optics imperfections and beam momentum offset. Their effects are quantified in Table~\ref{tab:data}, which can be used to approximate the covariance matrix of systematic uncertainties:
+The final systematic uncertainties, except the $4.2\un{\%}$ coming from the normalisation, are summarised in Figure~\ref{fig:syst unc} where their impact on the differential cross-section is shown. The leading uncertainties include normalisation, optics imperfections and beam momentum offset. Their effects are quantified in Table~\ref{tab:data}, which can be used to approximate the covariance matrix of systematic uncertainties:
 \begin{equation}
 \label{eq:covar mat}
 \mat V_{ij} = \sum_{q} \delta s_{q}(i)\ \delta s_{q}(j)\: ,
@@ -460,7 +460,7 @@ $0.19005$ & $0.19965$ & $0.19478$ & $\S12.124$ & $0.0585$ & $\S0.517$ & $+\S0.50
 \subsection{Statistical Uncertainty Adjustment}
 \label{sec:stat unc adj}
 
-The statistical fluctuations in the differential cross-section using the ``optimised'' binning have been slightly overestimated (the ``per-mille'' binning does not suffer from this problem). One way to demonstrate this is to split the data into groups of consecutive points small enough for a linear function to approximate well the differential cross-section within each group. Then, performing straight-line fits through each group yields $\chi^2$ values slightly too low. Alternatively, the issue can be demonstrated as follows. The data sample is divided into several sub-samples corresponding to the same luminosity, and the analysis method described in the earlier sections is repeated for each of these sub-samples. Then, fluctuations of each bin content are determined from the several sub-samples, giving values slightly lower than the uncertainty estimates.
+The statistical fluctuations in the differential cross-section using the ``optimised'' binning have been slightly overestimated, whereas the ``per-mille'' binning does not suffer from this problem. One way to demonstrate this is to split the data into groups of consecutive points small enough for a linear function to approximate well the differential cross-section within each group. Then, performing straight-line fits through each group yields on average $\chi^2$ values slightly too low. Alternatively, the issue can be demonstrated as follows. The data sample is divided into several sub-samples corresponding to the same luminosity, and the analysis method described in the earlier sections is repeated for each of these sub-samples. Then, fluctuations of each bin content are determined from the several sub-samples, giving values slightly lower than the uncertainty estimates.
 % Interpretation?
 
 As a remedy, the statistical uncertainties in the ``optimised'' binning have been divided by a factor of $1.176$. This value has been determined by requiring both binnings to give the same value of $\chi^2/\hbox{ndf}$ for fits of $\d\sigma / \d t$ to the fit function in Eq.~(\ref{eq:fit param}) with $N_b = 3$ which has enough flexibility to describe the data.
