--- a/2014/90m paper/elastic_90m_cern.tex
+++ b/2014/90m paper/elastic_90m_cern.tex
@@ -13,8 +13,8 @@
 \def\todo#1{{\color{red}TODO: #1}}
 \def\TODO#1{{\color{red}TODO: #1}}
 
-\setbox123\hbox{\small$0$}
-\setbox124\hbox{\small$_{0}$}
+\setbox123\hbox{\small$0$} % tune this ?
+\setbox124\hbox{\small$_{0}$} % tune this ?
 \def\S{\hbox to\wd123{\hss}}
 \def\.{\hbox to\wd124{\hss}}
 
@@ -24,7 +24,7 @@
 \def\Name#1{\textsc{#1}, }
 \def\REVIEW#1#2#3#4{{\it #1} {\bf #2} (#3) #4}
 
-%----------------------------------------------------------------------------------------------------
+%------------------------------------------------------------------------------
 
 \begin{document}
 
@@ -54,13 +54,7 @@
 %\newpage
 
 \begin{abstract}
-The TOTEM experiment has made a high-precision measurement of the elastic 
-proton-proton differential cross-section at the centre-of-mass energy 
-$\sqrt s = 8\un{TeV}$ based on a high-statistics data sample obtained with 
-the $\beta^* = 90\un{m}$ optics. 
-Both the statistical and systematic uncertainties remain below $1\un{\%}$ (except for the contribution from the overall normalisation). This unprecedented precision allows to exclude a purely exponential differential cross-section in the range of four-momentum transfer squared $0.027 < |t| < 0.2\un{GeV^2}$ with a significance greater than $7\un{\sigma}$.
-%
-Two extended parametrisations, with quadratic and cubic polynomials in the exponent, are shown to be well compatible with the data. Using them for the differential cross-section extrapolation to $t=0$, and further applying the optical theorem, yields total cross-section estimates $(100.8 \pm 2.1)\un{mb}$ and $(101.2 \pm 2.1)\un{mb}$, well compatible with previous TOTEM measurements.
+\input abstract
 \end{abstract}
 \end{titlepage}
 
@@ -97,6 +91,11 @@ Two extended parametrisations, with quadratic and cubic polynomials in the expon
 
 \bibitem{plb147} \Name{M. Bozzo et al.} \REVIEW{Phys.~Lett.}{B147}{1984}{385}
 
+\bibitem{prl61} \Name{N.A. Amos et al.} \REVIEW{Phys.~Rev.~Lett.}{61}{1988}{525}
+\bibitem{prl68} \Name{N.A. Amos et al.} \REVIEW{Phys.~Rev.~Lett.}{68}{1992}{2433}
+\bibitem{prd50} \Name{F. Abe et al.} \REVIEW{Phys.~Rev.}{D50}{1994}{5518}
+\bibitem{prd86} \Name{V.M. Abazov et al.} \REVIEW{Phys.~Rev.}{D86}{2012}{012009}
+
 \bibitem{epl96}
     %First measurements of the total proton-proton cross-section at the LHC energy of $\sqrt s =7\,\rm TeV$ CERN-PH-EP-2011-158
 	\Name{G.~Antchev~\etal{}~(TOTEM Collaboration)}
@@ -110,8 +109,9 @@ Two extended parametrisations, with quadratic and cubic polynomials in the expon
 	\Name{G.~Antchev~\etal{}~(TOTEM Collaboration)}
 	\REVIEW{Phys.~Rev.~Lett.}{111}{2013}{012001}
 
-\bibitem{alfa} \Name{The ATLAS Collaboration} 
-               \REVIEW{Nucl.~Phys.}{B889}{2014}{486-548}
+\bibitem{alfa}
+	\Name{G.~Aad~\etal{}~(ATLAS Collaboration)}
+	\REVIEW{Nucl.~Phys.}{B889}{2014}{486-548}
 
 \bibitem{totem-jinst}
     %The TOTEM Experiment at the CERN Large Hadron Collider, JINST 3 S08007, 2008
@@ -126,16 +126,15 @@ Two extended parametrisations, with quadratic and cubic polynomials in the expon
 
 \bibitem{totem-optics}
 	\Name{G.~Antchev~\etal{}~(TOTEM Collaboration)}
-	LHC Optics Measurement with Proton Tracks Detected by the Roman Pots of the TOTEM Experiment, 
-	New J. Phys. 16 (2014) 103041.
+	% LHC Optics Measurement with Proton Tracks Detected by the Roman Pots of the TOTEM Experiment, 
+	\REVIEW{New J.~Phys.}{16}{2014}{103041}
 
 \bibitem{op-elog} CERN BE-OP eLogbook: \url{https://www.cern.ch/ab-dep-op-elogbook/elogbook/secure/eLogbook.php?shiftId=1045825}
 
 \bibitem{hubert-thesis}
 	\Name{H.~Niewiadomski}
-	%Reconstruction of Protons in the TOTEM Roman Pot Detectors at the LHC
-    PhD thesis, 
-	%University of Manchester, 2008
+	``Reconstruction of Protons in the TOTEM Roman Pot Detectors at the LHC'',
+    PhD thesis, University of Manchester, 2008;
     CERN-THESIS-2008-080,
 	\url{http://cds.cern.ch/record/1131825}
 
