--- a/2014/90m paper/introduction.tex
+++ b/2014/90m paper/introduction.tex
@@ -4,7 +4,7 @@ The differential cross-section $\d \sigma/\d t$ of hadronic proton-(anti)proton
 scattering at low $|t|$ has traditionally been parametrised with a simple 
 exponential function, ${\rm e}^{-B |t|}$, giving a satisfactory description of 
 all past experimental data.
-Nonetheless, a few publications have already reported about hints of
+Nonetheless, a few experiments have already reported about hints of
 slight deviations from this behaviour. At the ISR, for $\sqrt{s}$ 
 between 21.5\,GeV and 52.8\,GeV, elastic pp and partly $\rm\bar{p}$p data have shown a 
 change of slope~\cite{plb39,plb115} or have been better parametrised with quadratic 
@@ -21,9 +21,9 @@ At the LHC, at 7\,TeV as well as at 8\,TeV, all data published so
 far~\cite{epl96,epl101-el,prl111,alfa} have been
 compatible with a pure exponential shape.
 
-This report presents a new data sample of elastic scattering at the energy of $\sqrt s = 8\un{TeV}$. Thanks to its very high statistics,
-an unprecedented precision has been reached in the region of four-momentum transfer squared $0.027 \lesssim |t| \lesssim 0.2\un{GeV^2}$. Both the statistical and systematic components of the differential cross-section uncertainty are controlled 
+This report presents a new data sample of elastic scattering at the energy of $\sqrt s = 8\un{TeV}$. Thanks to its high statistics,
+an unprecedented precision has been reached in the region $0.027 \lesssim |t| \lesssim 0.2\un{GeV^2}$. Both the statistical and systematic components of the differential cross-section uncertainty are controlled 
 at a level below $1\un{\%}$, except for the overall normalisation 
-(Section~\ref{sec:normalisation}). Consequently, the functional form of the cross-section can be strongly constrained, thus having more impact on theoretical model building and, in particular, on the extrapolation to $t=0$ (neglecting the influence of Coulomb scattering in the observed range), used for total cross-section determination. The often used purely exponential extrapolation has been found inadequate, and extended parametrisations are provided, still yielding total cross-section values compatible with the previous TOTEM results~\cite{prl111} at the same energy.
+(Section~\ref{sec:normalisation}). Consequently, the functional form of the cross-section can be strongly constrained, thus having more impact on theoretical model building and, in particular, on the extrapolation to $t=0$ used for total cross-section determination. Neglecting the influence of Coulomb scattering in the observed range, the often used purely exponential extrapolation has been found inadequate, and extended parametrisations are provided, still yielding total cross-section values compatible with the previous TOTEM results~\cite{prl111} at the same energy.
 
-This article is organised as follows. Section~\ref{sec:apparatus} outlines the detector apparatus used for this measurement. Section~\ref{sec:data taking} summarises the data-taking conditions; details on the LHC beam optics are given in Section~\ref{sec:beam optics}. Section~\ref{sec:analysis} describes the data analysis and reconstruction of the differential cross-section. In Section~\ref{sec:results} three cross-section parametrisations are tested, and from those compatible with data the total cross-section is derived. The results are summarised in Section~\ref{sec:conclusions}.
+This article is organised as follows. Section~\ref{sec:apparatus} outlines the detector apparatus used for this measurement. Section~\ref{sec:data taking} summarises the data-taking conditions; details on the LHC beam optics are given in Section~\ref{sec:beam optics}. Section~\ref{sec:analysis} describes the data analysis and reconstruction of the differential cross-section. In Section~\ref{sec:results} three parametrisations of the differential cross-section are tested, and from those compatible with data the total cross-section is derived. The results are summarised in Section~\ref{sec:conclusions}.
