--- a/2014/90m paper/results.tex
+++ b/2014/90m paper/results.tex
@@ -34,7 +34,7 @@ The fits have been performed by the standard least-squares method, in particular
 	\Delta = (\hbox{data} - \hbox{fit})\ ,\qquad
 	\mat V = \mat V_{\rm stat} + \mat V_{\rm syst}\ ,
 \end{equation}
-where $\Delta$ is a vector of differences between the differential cross-section data and a fit function evaluated at the bin representative points (see Table~\ref{tab:data}). The covariance matrix $\mat V$ is given by the sum of the statistical component $\mat V_{\rm stat}$ (statistical uncertainty from Table~\ref{tab:data} on the diagonal) and the systematic component $\mat V_{\rm syst}$ (see Eq.~(\ref{eq:covar mat})).
+where $\Delta$ is a vector of differences between the differential cross-section data and a fit function evaluated at the bin representative points (see Table~\ref{tab:data}). The covariance matrix $\mat V$ is given by the sum of the statistical component $\mat V_{\rm stat}$ (statistical uncertainty squared from Table~\ref{tab:data} on the diagonal) and the systematic component $\mat V_{\rm syst}$ (see Eq.~(\ref{eq:covar mat})).
 
 The quality of fits is judged on the basis of several measures. The first is the value of $\chi^2$ after minimisation divided by the number of degrees of freedom (ndf). Secondly, the p-value stands for the probability that a $\chi^2$ value greater than the observed one would be drawn from the $\chi^2$ distribution with the given number of degrees of freedom. Finally, significance means the half-width of a central region that needs to be excluded from a normal distribution to get the same integrated probability as the p-value. The significance is expressed in multiples of sigma, the standard deviation of the normal distribution.
 
@@ -45,7 +45,7 @@ The other two fits ($N_b = 2, 3$) are of reasonable quality and can, therefore, 
 \label{eq:si tot}
 \sigma_{\rm tot}^2 = {16\pi\, (\hbar c)^2\over 1 + \rho^2}\, \left. \d\sigma_{\rm el}\over\d t\right|_{t=0}\ ,
 \end{equation}
-which neglects the effects due to the Coulomb interaction (QED).
+which neglects the effects due to the Coulomb interaction.
 Using the COMPETE~\cite{compete} preferred-model extrapolation of $\rho = 0.140\pm 0.007$ yields
 \begin{equation}
 \label{eq:si tot results}
@@ -88,7 +88,7 @@ $3$ & $25.5/26 = 0.98$ & $0.49$ & $0.69\un{\sigma}$ \cr
 \includegraphics{fig/t_dist_rel_with_fits.pdf}
 \vskip-4mm
 \caption{%
-Differential cross-section using the ``optimised'' binning and plotted as relative difference from a reference exponential (see vertical axis). The black dots represent data points with statistical uncertainty bars. The coloured lines correspond to fits with parametrisation Eq.~(\ref{eq:fit param}) and different numbers of parameters in the exponent. The red line lies seemingly too high with respect to the data points, which is a consequence of the systematic degrees of freedom included in the fit (some of the effects in Figure~\ref{fig:syst unc} may flatten the distribution which at the same time changes the overall normalisation). The yellow band corresponds to the full systematic uncertainty, the brown-hatched one includes all systematic contributions except the normalisation. Both bands are centred around the fit curve with $N_b = 3$.
+Differential cross-section using the ``optimised'' binning and plotted as relative difference from a reference exponential (see vertical axis). The black dots represent data points with statistical uncertainty bars. The coloured lines correspond to fits with parametrisation Eq.~(\ref{eq:fit param}) and different numbers of parameters in the exponent. The red line lies seemingly too high with respect to the data points, which is a consequence of the systematic degrees of freedom included in the fit: some of the effects in Figure~\ref{fig:syst unc} may flatten the distribution which at the same time changes the overall normalisation. The yellow band corresponds to the full systematic uncertainty, the brown-hatched one includes all systematic contributions except the normalisation. Both bands are centred around the fit curve with $N_b = 3$.
 }
 \label{fig:data rel ob}
 \end{center}
