--- a/2014/90m paper/elastic_90m_cern.tex
+++ b/2014/90m paper/elastic_90m_cern.tex
@@ -43,10 +43,10 @@
 \hbox{}
 
 \title{Evidence for Non-Exponential Elastic Proton-Proton Differential Cross-Section at Low $|\hbox{t}|$ and $\sqrt{\hbox{s}}$ = 8 TeV by TOTEM}
-\ShortTitle{Evidence for Non-Exponential Elastic pp Differential Cross-Section at Low $|\hbox{t}|$ and $\sqrt{\hbox{s}}$ = 8 TeV}
+\ShortTitle{\small Evidence for Non-Exponential Elastic pp Differential Cross-Section at Low $|\hbox{t}|$ and $\sqrt{\hbox{s}}$ = 8 TeV}
 
 \Collaboration{The TOTEM Collaboration}
-\ShortAuthor{The TOTEM Collaboration (G.~Antchev \emph{\etal})}
+\ShortAuthor{\small The TOTEM Collaboration (G.~Antchev \emph{\etal})}
 
 
 \input authorlist_cern
