fix for M. Csanad
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@10243 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/authorlist_data.tex
+++ b/2013/1km paper/authorlist_data.tex
@@ -13,7 +13,7 @@
 	\AddAuthor{F.~S.~Cafagna}{5a}{}{}%
 	\AddAuthor{C.~E.~Campanella}{5c}{5a}{}%
 	\AddAuthor{M.~G.~Catanesi}{5a}{}{}%
-	\AddAuthor{M.~Csan\'{a}d}{4a}{}{}%
+	\AddAuthor{M.~Csan\'{a}d}{4a}{}{b}%
 	\AddAuthor{T.~Cs\"{o}rg\H{o}}{4a}{4b}{}%
 	\AddAuthor{M.~Deile}{9}{}{}%
 	\AddAuthor{F.~De~Leonardis}{5c}{5a}{}%
@@ -74,7 +74,7 @@
 	\AddAuthor{A.~Scribano}{7a}{}{}%
 	\AddAuthor{J.~Smajek}{9}{}{}%
 	\AddAuthor{W.~Snoeys}{9}{}{}%
-	\AddAuthor{T.~Sodzawiczny}{9}{}{}%
+	%\AddAuthor{T.~Sodzawiczny}{9}{}{}%
 	\AddAuthor{J.~Sziklai}{4a}{}{}%
 	\AddAuthor{C.~Taylor}{10}{}{}%
 	\AddAuthor{N.~Turini}{7b}{}{}%
