--- a/2013/1km paper/coulomb.tex
+++ b/2013/1km paper/coulomb.tex
@@ -3,6 +3,8 @@
 
 This section presents a study of the measured differential cross-section focused on the effects of the Coulomb-nuclear interference (CNI). These effects are sensitive to the phase of nuclear amplitude and thus allow for determination of additional physics parameters such as $\rho$. The presentation starts with Section~\ref{sec:cni framework} outlining the theoretical concepts needed to describe the CNI effects. It is followed by Section~\ref{sec:cni task discussion} with a critical discussion on the task feasibility, presenting a strategy for the study. Section~\ref{sec:cni fit techniques} describes fit techniques used for parameter determination. As anticipated in the introduction, this study strongly benefits from including another high-statistics data set \cite{8tev-90m} obtained at the same energy however with beam optics $\beta^* = 90\un{m}$. This gives several possibilities of combination with the above presented data, from $\beta^* = 1000\un{m}$ optics. In particular, Section~\ref{sec:cni common fits} gives results where both data sets enter the fit on equal ground, while Section~\ref{sec:cni reciprocal fits} reports results where the data sets are assigned complementary roles.
 
+\TODO{Which binning of 90m data is used}
+
 
 
 %----------------------------------------------------------------------------------------------------
