--- a/2013/1km paper/elastic_1km_npb.tex
+++ b/2013/1km paper/elastic_1km_npb.tex
@@ -117,22 +117,7 @@ Coulomb-Nuclear Interference Region by TOTEM}
 \date{\today}
 
 \begin{abstract}
-The TOTEM experiment at the CERN LHC has measured elastic proton-proton 
-scattering at the centre-of-mass energy 
-$\sqrt{s}=8\,$TeV and squared four-momentum transfers $|t|$ from $6\times10^{-4}\,\rm GeV^{2}$ to 0.2\,GeV$^{2}$.
-Near the lower end of the $t$-interval, for
-$|t| \lesssim 2\times10^{-3}\,\rm GeV^{2}$, the differential cross-section is 
-sensitive to the 
-interference between the hadronic and the electromagnetic scattering amplitudes.
-This article presents the measured cross-section and its interpretation for 
-different assumptions on the functional forms of the interference term and of 
-the phase of the hadronic elastic amplitude. In 
-particular, the $\rho$-parameter, i.e. 
-the arctangent of the hadronic phase at $t = 0$,
-%the ratio between the real and the 
-%imaginary parts of the forward hadronic elastic amplitude, 
-was determined for each case. The conditional results for $\rho$ lie in the 
-range $0.059 - 0.12$ with a typical uncertainty of $\sim0.02$.
+\input abstract
 \end{abstract}
 
 % TODO
