--- a/2013/1km paper/elastic_1km_cern.tex
+++ b/2013/1km paper/elastic_1km_cern.tex
@@ -1,10 +1,19 @@
 \documentclass[TOTEM]{cern/cernphprep}
 
+\usepackage{color}
+
 \def\d{{\rm d}}
 \def\un#1{\,{\rm #1}}
 \def\ung#1{\quad[{\rm #1}]}
 \def\unt#1{[{\rm #1}]}
 \def\e{{\rm e}}
+\def\I{{\rm i}}
+\def\T{{\rm T}}
+\def\vec#1{\mathbf{#1}}
+\def\mat#1{\mathsf{#1}}
+
+\def\todo#1{{\color{red}TODO: #1}}
+\def\TODO#1{{\color{red}TODO: #1}}
 
 \setbox123\hbox{\small$0$}
 \def\S{\hbox to\wd123{\hss}}
@@ -56,124 +65,11 @@ CNI Region by TOTEM}
 \Collaboration{The TOTEM Collaboration}
 \ShortAuthor{The TOTEM Collaboration (G.~Antchev \emph{\etal})}
 
-\iffalse
-\begin{Authlist}
-G.~Antchev\Aref{a},
-P.~Aspell\Iref{8},
-I.~Atanassov\IAref{8}{a},
-V.~Avati\Iref{8},
-J.~Baechler\Iref{8},
-V.~Berardi\IIref{5b}{5a},
-M.~Berretti\Iref{7b},
-E.~Bossini\Iref{7b},
-M.~Bozzo\IIref{6b}{6a},
-P.~Brogi\Iref{7b},
-E.~Br\"{u}cken\IIref{3a}{3b},
-A.~Buzzo\Iref{6a},
-F.~S.~Cafagna\Iref{5a},
-M.~Calicchio\IIref{5b}{5a},
-M.~G.~Catanesi\Iref{5a},
-C.~Covault\Iref{9},
-M.~Csan\'{a}d\IAref{4}{e},
-T.~Cs\"{o}rg\H{o}\Iref{4},
-M.~Deile\Iref{8},
-K.~Eggert\Iref{9},
-V.~Eremin\Aref{b},
-R.~Ferretti\IIref{6a}{6b},
-F.~Ferro\Iref{6a},
-A. Fiergolski\Aref{c},
-F.~Garcia\Iref{3a},
-S.~Giani\Iref{8},
-V.~Greco\IIref{7b}{8},
-L.~Grzanka\IAref{8}{d},
-J.~Heino\Iref{3a},
-T.~Hilden\IIref{3a}{3b},
-R.~A.~Intonti\Iref{5a},
-J.~Ka\v{s}par\IIref{1a}{8},
-J.~Kopal\IIref{1a}{8},
-V.~Kundr\'{a}t\Iref{1a},
-K.~Kurvinen\Iref{3a},
-S.~Lami\Iref{7a},
-G.~Latino\Iref{7b},
-R.~Lauhakangas\Iref{3a},
-T.~Leszko\Aref{c},
-E.~Lippmaa\Iref{2},
-M.~Lokaj\'{\i}\v{c}ek\Iref{1a},
-M.~Lo~Vetere\IIref{6b}{6a},
-F.~Lucas~Rodr\'{i}guez\Iref{8},
-M.~Macr\'{\i}\Iref{6a},
-T.~M\"aki\Iref{3a},
-A.~Mercadante\IIref{5b}{5a},
-N.~Minafra\Iref{8} ,
-S.~Minutoli\Iref{6a},
-F.~Nemes\IAref{4}{e},
-H.~Niewiadomski\Iref{8},
-E.~Oliveri\Iref{7b},
-F.~Oljemark\IAref{3a}{3b},
-R.~Orava\IIref{3a}{3b},
-M.~Oriunno\IAref{8}{f},
-K.~\"{O}sterberg\IIref{3a}{3b},
-P.~Palazzi\Iref{7b},
-J.~Proch\'{a}zka\Iref{1a},
-M.~Quinto\Iref{5a},
-E.~Radermacher\Iref{8},
-E.~Radicioni\Iref{5a},
-F.~Ravotti\Iref{8},
-E.~Robutti\Iref{6a},
-L.~Ropelewski\Iref{8},
-G.~Ruggiero\Iref{8},
-H.~Saarikko\IIref{3a}{3b},
-A.~Santroni\IIref{6b}{6a},
-A.~Scribano\Iref{7b},
-J.~Smajek\Iref{8},
-W.~Snoeys\Iref{8},
-J.~Sziklai\Iref{4},
-C.~Taylor\Iref{9},
-N.~Turini\Iref{7b},
-V.~Vacek\Iref{1b},
-M.~V\'itek\Iref{1b},
-J.~Welti\IIref{3a}{3b} and
-J.~Whitmore\Iref{10}
-\end{Authlist}
-
-\Instline{1a}{Institute of Physics of the Academy of Sciences of the Czech Republic, Praha, Czech Republic.}
-\Instline{1b}{Czech Technical University, Praha, Czech Republic.}
-\Instline{2} {National Institute of Chemical Physics and Biophysics NICPB, Tallinn, Estonia.}
-\Instline{3a}{Helsinki Institute of Physics, Finland.}
-\Instline{3b}{Department of Physics, University of Helsinki, Finland.}
-\Instline{4} {MTA Wigner Research Center, RMKI, Budapest, Hungary.}
-\Instline{5a}{INFN Sezione di Bari, Italy.}
-\Instline{5b}{Dipartimento Interateneo di Fisica di Bari, Italy.}
-\Instline{6a}{Sezione INFN, Genova, Italy.}
-\Instline{6b}{Universit\`{a} degli Studi di Genova, Italy.}
-\Instline{7a}{INFN Sezione di Pisa, Italy.}
-\Instline{7b}{Universit\`{a} degli Studi di Siena and Gruppo Collegato INFN di Siena, Italy.}
-\Instline{8} {CERN, Geneva, Switzerland.}
-\Instline{9} {Case Western Reserve University, Dept. of Physics, Cleveland, OH, USA.}
-\Instline{10}{Penn State University, Dept.~of Physics, University Park, PA, USA.}
-
-\Anotfoot{a}{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, Bulgarian Academy of Sciences, Sofia, Bulgaria.}
-\Anotfoot{b}{Ioffe Physical - Technical Institute of Russian Academy of Sciences.}
-\Anotfoot{c}{Warsaw University of Technology, Poland.}
-\Anotfoot{d}{Institute of Nuclear Physics, Polish Academy of Science, Cracow, Poland.}
-\Anotfoot{e}{Department of Atomic Physics, E\"otv\"os University, Hungary.}
-\Anotfoot{f}{SLAC National Accelerator Laboratory, Stanford CA, USA.}
-\fi
+\input authorlist_cern
 
 %\newpage
 \begin{abstract}
-The TOTEM experiment at the CERN LHC has measured elastic proton-proton 
-scattering at the centre-of-mass energy 
-$\sqrt{s}=8\,$TeV and squared four-momentum transfers $|t|$ from $6\times10^{-4}\,\rm GeV^{2}$ to ...?
-Near the lower end of the $t$-interval, for
-$|t|\lesssim 2\times10^{-3}\,\rm GeV^{2}$, the differential cross-section is 
-sensitive to the 
-interference between the hadronic and the electromagnetic scattering amplitudes.
-This article presents the measured cross-section and its interpretation for 
-different assumptions on the functional form of the interference term. In 
-particular, the $\rho$-parameter, i.e. the ratio between the real and the 
-imaginary parts of the forward hadronic elastic amplitude, was determined.
-\textbf{Give value here? For which case?}
+\input abstract
 \end{abstract}
 \end{titlepage}
 
