included TOTEM B/W logo
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@10270 4525493e-7705-40b1-a816-d608a930855b

--- a/2014/90m paper/elastic_90m_cern.tex
+++ b/2014/90m paper/elastic_90m_cern.tex
@@ -30,7 +30,7 @@
 
 \begin{titlepage}
 
-\renewcommand{\EXPLOGO}{fig/logo_totem_black.pdf}
+\renewcommand{\EXPLOGO}{logo_totem_black.pdf}
 
 \PHnumber{XXXX}
 \PHdate{XXXX}
